style: adjust flexbox alignment and fix width for container div in flexmodel.css

--- a/PracticeQs/flexmodel.css
+++ b/PracticeQs/flexmodel.css
@@ -6,6 +6,8 @@
     border: 2px solid black;
     display:flex;
     flex-direction: row;
+    justify-content: flex-start; 
+    
 }
 
 h1{
@@ -13,8 +15,9 @@ h1{
 }
 
 #container div{
-    width: 300px;
+    
     height: 100px;
+    width: 100px;
   color: white;
   font-size: 1.5em;   
   text-align:center;
